remove react default code. Add some starter styles and nav

--- a/haile-2.0/src/App.css
+++ b/haile-2.0/src/App.css
@@ -1,38 +1,46 @@
+:root{
+  --primary-color: #264653;
+  --secondary-color: #2a9d8f;
+  --third-color: #e9c46a;
+  --main-font: #f4a261;
+  --secondary-font: #e76751;
+}
+
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-image: radial-gradient(circle, #2a9d8e 0%, #264653 100%);
   min-height: 100vh;
+  color: var(--secondary-font);
+}
+
+/* Nav bar  */
+header {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 9999;
+  padding: 20px;
+  margin-left:10%;
+  margin-right: 10%;
+
+}
+header nav ul {
+  list-style: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
 }
-
-.App-link {
-  color: #61dafb;
+header nav ul li a {
+  padding: 15px;
+  font-size: 22px;
+  color: var(--secondary-color);
+  text-decoration: none;
 }
+header nav ul li a:hover {
+  background: var(--primary-color);
+  color: var(--third-color);
+  border-radius: 10px;
+  text-shadow: none;
+  text-decoration-color: var(--third-color);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
