add header and nav bar

--- a/haile-2.0/src/App.css
+++ b/haile-2.0/src/App.css
@@ -44,3 +44,8 @@ header nav ul li a:hover {
   text-decoration-color: var(--third-color);
 
 }
+
+.nav-active {
+  color: var(--third-color);
+  text-decoration: underline;
+}
